--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_gallery">Library</string>
     <string name="title_Favourites">Favourites</string>
     <string name="title_about">About</string>
+    <string name="app_summary">The Best Song Collections of from Tamil Cinema</string>
 </resources>
