--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_Favourites">Favourites</string>
     <string name="title_about">About</string>
     <string name="app_summary">The Best Song Collections of from Tamil Cinema</string>
+    <string name="share">Share</string>
+    <string name="lyrics">Lyrics</string>
 </resources>
