--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="app_summary">The Best Song Collections of from Tamil Cinema</string>
     <string name="share">Share</string>
     <string name="lyrics">Lyrics</string>
+    <string name="album">Album/Film:</string>
+    <string name="song_title">Title of the Song:</string>
+    <string name="submit">SUBMIT</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
