--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">besttamilsongs</string>
+    <string name="app_name">Best Tamil Songs</string>
     <string name="title_player">Music Box</string>
     <string name="title_gallery">Library</string>
     <string name="title_Favourites">Favourites</string>
