--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="shareapp">Share App</string>
     <string name="contact">Contact us</string>
     <string name="rate">Rate us</string>
+    <string name="song_req">Song Request</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
