filters fully working implemented google sign in play menu working added fav working with playlist

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_player">Music Box</string>
     <string name="title_gallery">Library</string>
     <string name="title_Favourites">Favourites</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_about">About</string>
     <string name="app_summary">The Best Tamil Song Streaming App with Lyrics</string>
     <string name="share">Share</string>
